--- a/index.html
+++ b/index.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
-<script type="text/javascript" src="index.js"></script>
-<link rel="stylesheet" href="index.css">
+	<title>Satellite Positioner</title>
+	<script type="text/javascript" src="index.js"></script>
+	<link rel="stylesheet" href="index.css" />
 </head>
 <body>
-
 <h1>Satellite Positioner</h1>
-<div class="compass">
-  <div class="arrow"></div>
-  <div class="disc" id="compassDiscImg"></div>
+<div class="diagram">
+  <div class="arrow">
+  </div>
+  <div class="disc" id="disc">
+  </div>
 </div>
-
-<div class="orientation-data">
-  
+<div class="position-data">
       <form>
-      	<label for="satpos">Satellite position (+ for E, - for W):</label>
-      <input
-        type='text' id='satpos' name='satpos'
-        onChange="recalculate()"
-      /><br />
-      	<label for="longitude">Longitude:</label>
-      <input
-        type='text' id='longitude' name='longitude'
-        onChange="recalculate()"
-      /><br />
-      <label for="latitude">Latitude:</label>
-      <input
-        type='text' id='latitude' name='latitude'
-        onChange="recalculate()"
-      /><br />
-      	Required Azimuth: <span id="req_elevation"></span><br />
- 			 Actual Elevation: <span id="act_elevation"></span><br />
-      	Required Elevation: <span id="req_elevation"></span><br />
-  			Actual Azimuth: <span id="act_azimuth"></span><br />
+			<label for='satpos'>Satellite position (+ for E, - for W):</label>
+      	<input type='text' id='satpos' name='satpos' onChange='recalculate()' /><br />
+      	<label for='longitude'>Longitude:</label>
+      	<input type='text' id='longitude' name='longitude' onChange='recalculate()' /><br />
+      	<label for="latitude">Latitude:</label>
+      	<input type='text' id='latitude' name='latitude' onChange='recalculate()' />
       </form>
+		Required Elevation: <span id="req_elevation"></span><br />
+		Actual Elevation: <span id="act_elevation"></span><br />
+		Required Azimuth: <span id="req_azimuth"></span><br />
+		Actual Azimuth: <span id="act_azimuth"></span>
 </div>
-<div id="notice"></div>
-
+<div id='notice'></div>
 </body>
 </html>
