--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Satellite Positioner</h1>
-<div class="diagram">
+<div class="compass">
   <div class="arrow">
   </div>
   <div class="disc" id="disc">
