Worked on turning pointer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<h1>Satellite Positioner</h1>
 		<div class="diagram">
-			<div class="pointer">
+			<div class="pointer" id="pointer">
 			</div>
 			<div class="circle" id="circle">
 			</div>
