--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Satellite Positioner</title>
+	<title>Satellite Dish Positioner</title>
 	<script type="text/javascript" src="index.js"></script>
 	<link rel="stylesheet" href="index.css" />
 </head>
 	<body>
 		<h1>Satellite Positioner</h1>
 		<div class="diagram">
-			<div class="pointer" id="pointer">
-			</div>
-			<div class="circle" id="circle">
-			</div>
+			<img src="pointer.svg" class="pointer" id="pointer" />
+			<img src="circle.svg" class="circle" id="circle" />
+			<img src="sat.svg" class="satpointer" id="satpointer" />
 		</div>
 		<div class="position-data">
 			<form>
