--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Satellite Dish Positioner</title>
-	<script type="text/javascript" src="index.js"></script>
-	<link rel="stylesheet" href="index.css" />
-</head>
+	<head>
+		<title>
+			Satellite Dish Positioner
+		</title>
+		<script type="text/javascript" src="dynamic.js"></script>
+		<link rel="stylesheet" href="style.css" />
+	</head>
 	<body>
-		<h1>Satellite Positioner</h1>
-		<div class="diagram">
+		<h1>Satellite Dish Positioner</h1>
+		<div class="diagram" id='diagram'>
 			<img src="pointer.svg" class="pointer" id="pointer" />
 			<img src="circle.svg" class="circle" id="circle" />
 			<img src="sat.svg" class="satpointer" id="satpointer" />
 		</div>
-		<div class="position-data">
-			<form>
+			<form id='userinput'>
 				<label for='satpos'>Satellite position (+ for E, - for W):</label>
 				<input type='text' id='satpos' name='satpos' onChange='recalculate()' /><br />
       		<label for="latitude">Latitude:</label>
@@ -22,10 +23,8 @@
       		<input type='text' id='longitude' name='longitude' onChange='recalculate()' />
       	</form>
 			Required Elevation: <span id="req_elevation"></span><br />
-			Actual Elevation: <span id="act_elevation"></span><br />
 			Required Azimuth: <span id="req_azimuth"></span><br />
 			Actual Azimuth: <span id="act_azimuth"></span>
-		</div>
 		<div id='notice'>
 		</div>
 	</body>
