Added copyright, contact and impressum

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
     </div>
     <div id='notice-geolocation'> </div>
     </main>
+    <footer>
+   &copy;Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="impressum.html">Impressum</a>
+	</footer>
 </body>
 
 </html>
