Added nglish impressum

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id='notice-geolocation'> </div>
     </main>
     <footer>
-   &copy;Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="impressum.html">Impressum</a>
+   &copy;2020 Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="impressum.html">Impressum</a> <a href="legal.html">Legal</a>
 	</footer>
 </body>
 
