--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id='notice-geolocation'> </div>
     </main>
     <footer>
-   &copy;2020 Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="impressum.html">Impressum</a> <a href="legal.html">Legal</a>
+   &copy;2020 Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="legal_de.html">Impressum/Datenschutz</a> <a href="legal_en.html">Legal/Privacy</a>
 	</footer>
 </body>
 
