--- a/legal_de.html
+++ b/legal_de.html
@@ -109,7 +109,7 @@
 <p><a href="index.html">Back</a></p>
     </main>
     <footer>
-   &copy;2020 Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="impressum.html">Impressum</a> <a href="legal.html">Legal</a>
+   &copy;2020 Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="legal_de.html">Impressum/Datenschutz</a> <a href="legal_en.html">Legal/Privacy</a>
 	</footer>
 </body>
 
