Fixed css for error messages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <text class='text_satpointer' x="455" y="290" >SAT</text>
             </svg>
     </div>
-    <div id='text'>
+    <div class='textelement' id='text'>
         <button type="button" id="fetch_location">Fetch Location</button>
         <br />
         <label for='satpos' id='satpos_label'>Satellite position:</label>
@@ -55,9 +55,9 @@
         <br /> Required Azimuth: <span id="req_azimuth"></span>
         <br /> Actual Azimuth: <span id="act_azimuth"></span>
     </div>
-    <div id='notice-deviceorientation'>
+    <div class='textelement' id='notice-deviceorientation'>
     </div>
-    <div id='notice-geolocation'> </div>
+    <div class='textelement' id='notice-geolocation'> </div>
     </main>
     <footer>
    &copy;2020 Tobias Klumpp <a href="mailto:dishpos@toklumpp.de">Contact</a> <a href="legal_de.html">Impressum/Datenschutz</a> <a href="legal_en.html">Legal/Privacy</a>
