Used abbreviation for Satellite

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
     <div class='textelement' id='text'>
         <button type="button" id="fetch_location">Fetch Location</button>
         <br />
-        <label for='satpos_list' id='satpos_label'>Satellite position:</label>
+        <label for='satpos_list' id='satpos_label'>Sat:</label>
 <select name='satpos_list' id="satpos_list">
   <option value='19.2'>Astra 1M/N/KR/L (19.2°E)</option>
   <option value='4.8'>Astra 4A (4.8°E)</option>
