Fixed text field

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 <select name='satpos_list' id="satpos_list">
   <option value='19.2'>Astra 1M/N/KR/L (19.2°E)</option>
   <option value='4.8'>Astra 4A (4.8°E)</option>
-  <option value='null'>Other:</option>
+  <option value='other'>Other:</option>
 </select> <input type='text' id='satpos_text'
         name='satpos_text' />
 
