--- a/src/legal_de.html
+++ b/src/legal_de.html
@@ -29,7 +29,7 @@
             </p>
             <h2>Kontakt</h2>
             <p>
-                Telefon: +49 721 98192649-1<br />Telefax: +49 721 98192649-9<br/>E-Mail: legal@toklumpp.de
+                Telefon: +49 721 98192649-1<br />Telefax: +49 721 98192649-9<br/>E-Mail: <a href="mailto:legal@toklumpp.de">legal@toklumpp.de</a>
             </p>
             <h2>Haftungsausschluss</h2>
             <h3>Haftung f&uuml;r Inhalte</h3>
@@ -53,7 +53,7 @@
         <h3>I. Informationen über uns als Verantwortliche</h3>
         <p>Verantwortlicher Anbieter dieses Internetauftritts im datenschutzrechtlichen Sinne ist:</p>
         <p>Tobias Klumpp<br>Willy-Andreas-Allee 3<br>76131 Karlsruhe<br>Deutschland</p>
-        <p>Telefon: +49 721 98192649-1<br>Telefax: +49 721 98192649-9<br>E-Mail: legal@toklumpp.de</p>
+        <p>Telefon: +49 721 98192649-1<br>Telefax: +49 721 98192649-9<br>E-Mail: <a href="mailto:legal@toklumpp.de">legal@toklumpp.de</a></p>
         <h3>II. Rechte der Nutzer und Betroffenen</h3>
         <p>Mit Blick auf die nachfolgend noch näher beschriebene Datenverarbeitung haben die Nutzer und Betroffenen das Recht</p>
         <ul>
