--- a/src/legal_en.html
+++ b/src/legal_en.html
@@ -32,7 +32,7 @@ Germany</p>
 <h2>Contact Information</h2>
 <p>Telephone: +49 721 98192649-1<br />
 Fax: +49 721 98192649-9<br />
-E-Mail: legal@toklumpp.de</p>
+E-Mail: <a href="mailto:legal@toklumpp.de">legal@toklumpp.de</a></p>
 <h2>Disclaimer</h2>
 <h3>Accountability for content</h3>
 <p>The contents of our pages have been created with the utmost care. However, we cannot guarantee the contents'
@@ -65,7 +65,7 @@ The materials from these pages are copyrighted and any unauthorized use may viol
         <h3>I. Information about us as controllers of your data</h3>
         <p>The party responsible for this website (the "controller") for purposes of data protection law is:</p>
         <p>Tobias Klumpp<br>Willy-Andreas-Allee 3<br>76131 Karlsruhe<br>Germany</p>
-        <p>Telephone: +49 721 98192649-1<br>Fax: +49 721 98192649-9<br>Email: legal@toklumpp.de</p>
+        <p>Telephone: +49 721 98192649-1<br>Fax: +49 721 98192649-9<br>Email: <a href="mailto:legal@toklumpp.de">legal@toklumpp.de</a></p>
 			<h3>II. The rights of users and data subjects</h3>
         <p>With regard to the data processing to be described in more detail below, users and data subjects have the right</p>
         <ul type="disc">
