--- a/src/legal_en.html
+++ b/src/legal_en.html
@@ -9,12 +9,14 @@
     Makes it possible to calculate the required azimuth and elevation for a 
     given satellite position and offers a tool for aligning the satellite dish to the calculated azimuth." />
     <meta name='keywords' content='Satellite,Dish,Position' />
+    <meta name="copyright" content="Tobias Klumpp" />
+	<meta name="author" content="Tobias Klumpp" />
     <title>Dishpos Satellite Dish Positioner </title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" href="icon.svg" type="image/svg+xml" /> 
-    <link rel="apple-touch-icon" href="icon_apple.png">
+    <link rel="apple-touch-icon" href="icon_apple.png" />
 
 
 </head>
