--- a/src/legal_de.html
+++ b/src/legal_de.html
@@ -14,7 +14,7 @@
     <title>Dishpos Satellite Dish Positioner </title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="icon.svg" type="image/svg+xml" /> 
     <link rel="apple-touch-icon" href="icon_apple.png" />
 
