--- a/src/index.html
+++ b/src/index.html
@@ -48,12 +48,12 @@
     <div class='textelement' id='text'>
         <button type="button" id="fetch_location">Fetch Location</button>
         <br />
-        <label for='satpos_list' id='satpos_label'>Sat:</label>
+        <label for='satpos_list' id='satpos_list_label'>Sat:</label>
 <select class='variable_text input_text' name='satpos_list' id="satpos_list">
   <option value='19.2'>Astra 1KR/1L/1M/1N</option>
   <option value='13.0'>Hot Bird 13B/13C/13E</option>
   <option value='other'>Other:</option>
-</select> <input class='variable_text input_text' type='text' id='satpos_text'
+</select> <label for='satpos_text' id='satpos_text_label'>Pos:</label><input class='variable_text input_text' type='text' id='satpos_text'
         name='satpos_text' placeholder='Orbital Position' />°E
 
         <br /> Latitude: <span class='variable_text' id="latitude"></span>
